# pywebview-mcp

./: .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
examples/: cursor-mcp-config.json  test_app.py
pywebview_mcp/: __init__.py  __main__.py  bridge.py  cdp_env.py  dom_scripts.py  launch.py  server.py
skills/pywebview-mcp/: SKILL.md
tests/: conftest.py  test_bridge_health.py  test_bridge_pure.py  test_integration_ready.py  test_launch.py  test_server_pure.py
