[project]
name = "pywebview-mcp"
version = "0.1.4"
description = "Playwright-style MCP server for pywebview apps — inspect, control, and debug via Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "pywebview", "debug", "gui", "claude"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "websocket-client>=1.8",
]

[project.urls]
Homepage = "https://github.com/com55/pywebview-mcp"
Repository = "https://github.com/com55/pywebview-mcp"
Issues = "https://github.com/com55/pywebview-mcp/issues"

[project.optional-dependencies]
bridge = ["pywebview>=6.0"]

[project.scripts]
pywebview-mcp = "pywebview_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pywebview>=6.0",
    "websocket-client>=1.8",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests that launch a real pywebview app",
]
addopts = "-ra"
